# Debaising_SLM

./: .gitignore  QUICKSTART.md  bias_performance_report.json  bias_performance_report.txt  main.py  pyproject.toml  run.py
.github/: copilot-instructions.md
benchmarking/: stereoset.py  steroset.py
data/processed/: dataset.json
data/raw/: occupations.txt
model_usage/: biasbios.py  masked_example.py  mc_example.py
src/: main.py  pipeline.py
src/debiaser/: inference.py  trainer.py  visualization.py
src/preprocess/: create_dataset.py  data_splitter.py  utils.py
src/utils/: __init__.py  logger.py
temp/: model.py
