[project]
name = "debiasing-slms"
version = "0.1.0"
description = "Debiasing Small Language Models - A comprehensive toolkit for reducing bias in transformer models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "torch>=2.8.0",
    "transformers>=4.55.3",
    "datasets>=3.2.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "wandb>=0.18.0",
    "tensorboard>=2.18.0",
    "plotly>=5.24.0",
    "nltk>=3.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

